[metadata]
name = simple-online-realtime-tracking
version = 0.3
author = Alex Bewley
description = A simple online and realtime tracking algorithm for 2D multiple object tracking in video sequences
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/timstokman/sort
classifiers = 
    Programming Language :: Python :: 3
    Operating System :: OS Independent
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)

[options]
package_dir =
    = src
packages = sort
python_requires = >=3.8
install_requires =
    filterpy==1.4.5
    lap==0.4.0
    numpy>=1.18.5